[package]
name = "raspi-exporter"
version = "0.1.0"
edition = "2024"

[dependencies.anyhow]
version = "1.0.100"

[dependencies.axum]
version = "0.8.6"
default-features = false
features = ["tokio", "http1"]

[dependencies.clap]
version = "4.5.49"
features = ["derive"]

[dependencies.prometheus-client]
version = "0.24.0"

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dependencies.tokio]
version = "1.47.1"
features = ["macros", "net", "process", "rt-multi-thread", "signal"]

[dependencies.tracing]
version = "0.1.41"

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter", "json"]

[dev-dependencies.futures]
version = "0.3.31"
default-features = false
features = ["std"]

[dev-dependencies.mockall]
version = "0.13.1"
